--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="site-header__main">
       <div class="site-header__main-container container">
-        <nav class="sitenav">
+        <nav class="site-header__sitenav sitenav">
           <ul class="sitenav__list">
             <li class="sitenav__item">
               <a class="sitenav__link" href="#">Shop</a>
@@ -54,12 +54,27 @@
           <a class="auth__link" href="#">Account</a>
           <a class="auth__store store" href="#">
             <span class="store__count">0</span>
-            <img class="strore__img" src="img/store-pocket.svg" alt="Store pocket" width="20" height="22">
+            <img class="store__img" src="img/store-pocket.svg" alt="Store pocket" width="20" height="22">
           </a>
         </div>
       </div>
     </div>
   </header>
+
+  <!-- HERO  -->
+  <div class="hero">
+    <div class="hero__inner">
+      <div class="hero__bg">
+      </div>
+      <div class="hero__container container">
+        <div class="hero__content">
+          <div class="hero__text">Ready to get drenched?</div>
+          <h1 class="hero__title">Meet monsoon moisture mask</h1>
+          <a class="hero__button button" href="#">Shop now</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="js/main.js"></script>
 </body>
