--- a/index.html
+++ b/index.html
@@ -76,6 +76,45 @@
     </div>
   </div>
 
+  <main class="main-content">
+    <section class="section-production">
+      <div class="section-production__container container">
+        <h2 class="section-production__title">Pick a Pretty Bottle</h2>
+        <ul class="section-production__list">
+          <li class="section-production__product product">
+            <div class="product__inner">
+              <img class="product__img" src="img/daedreamer.jpg" alt="Daedreamer" width="340" height="510" srcset="img/daedreamer.jpg 1x, img/daedreamer@2x.jpg 2x">
+              <h3 class="product__title">The daedreamer set</h3>
+              <span class="product__cost">&#x24 49.00</span>
+            </div>
+          </li>
+          <li class="section-production__product product">
+            <div class="product__inner">
+              <img class="product__img" src="img/shampoo.jpg" alt="Shampoo" width="340" height="510" srcset="img/shampoo.jpg 1x, img/shampoo@2x.jpg 2x">
+              <h3 class="product__title">Shampoo</h3>
+              <span class="product__cost">&#x24 24.00 to &#x24 64.00</span>
+            </div>
+          </li>
+          <li class="section-production__product product">
+            <div class="product__inner">
+              <img class="product__img" src="img/conditioner.jpg" alt="conditioner" width="340" height="510" srcset="img/conditioner.jpg 1x, img/conditioner@2x.jpg 2x">
+              <h3 class="product__title">Conditioner</h3>
+              <span class="product__cost">&#x24 24.00 to &#x24 64.00</span>
+            </div>
+          </li>
+        </ul>
+        <div class="section-production__slider slider">
+          <button class="slider__button">
+            <img class="slider__button-img" src="img/prev.png" width="66" height="9" alt="Prev button" srcset="img/prev.png 1x, img/prev@2x.png 2x">
+          </button>
+          <button class="slider__button">
+            <img class="slider__button-img" src="img/next.png" width="66" height="9" alt="Next button" srcset="img/next.png 1x, img/next@2x.png 2x">
+          </button>
+        </div>
+      </div>
+    </section>
+  </main>
+
   <script src="js/main.js"></script>
 </body>
 </html>
