--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
   </div>
 
   <main class="main-content">
+
+    <!-- SECTION-PRODUCTION  -->
     <section class="section-production">
       <div class="section-production__container container">
         <h2 class="section-production__title">Pick a Pretty Bottle</h2>
@@ -110,6 +112,18 @@
           <button class="slider__button">
             <img class="slider__button-img" src="img/next.png" width="66" height="9" alt="Next button" srcset="img/next.png 1x, img/next@2x.png 2x">
           </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECTION-CTA  -->
+    <section class="section-cta">
+      <div class="section-cta__inner">
+        <div class="section-cta__container container">
+          <div class="section-cta__content cta-content">
+            <h2 class="cta-content__title">Feel the warmth of the desert wherever you are.</h2>
+            <a href="" class="cta-content__button button">Shop sets</a>
+          </div>
         </div>
       </div>
     </section>
