--- a/index.html
+++ b/index.html
@@ -127,6 +127,21 @@
         </div>
       </div>
     </section>
+
+
+    <!-- SECTION-INFO  -->
+    <section class="section-info">
+      <div class="section-info__container container">
+        <div class="section-info__content">
+          <div class="section-info__content-inner">
+            <h2 class="section-info__title">Meet dae</h2>
+            <p class="section-info__description">We’re a haircare line based in sunny Arizona. Our products are made up of the many things that make our home special, including the scent of orange blossoms in the air, colors of majestic sunsets and nourishing ingredients derived from desert botanicals. We believe haircare doesn’t have to be complicated and aimed to make a line that is simple and effective. We hope that dae plays a special role in your everyday hair routine from sunrise to sunset and allows you to feel the warmth of the desert wherever you are.</p>
+            <a class="section-info__button button" href="#">Read more</a>
+          </div>
+        </div>
+        <img class="section-info__img" src="img/girl.jpg" alt="A beatiful girl"  width="500" height="750" srcset="img/girl.jpg 1x, img/girl@2x.jpg 2x">
+      </div>
+    </section>
   </main>
 
   <script src="js/main.js"></script>
