Add section follow

--- a/index.html
+++ b/index.html
@@ -142,6 +142,34 @@
         <img class="section-info__img" src="img/girl.jpg" alt="A beatiful girl"  width="500" height="750" srcset="img/girl.jpg 1x, img/girl@2x.jpg 2x">
       </div>
     </section>
+
+
+    <!-- SECTION-FOLLOW  -->
+    <section class="section-follow">
+      <div class="section-follow__container container">
+        <h2 class="section-follow__title">Follow us @daehair</h2>
+        <ul class="section-follow__list">
+          <li class="section-follow__item">
+            <img class="section-follow__img" src="img/photo-1.jpg" alt="Photo 1" width="192" height="167" srcset="img/photo-1.jpg 1x, img/photo-1@2x.jpg 2x">
+          </li>
+          <li class="section-follow__item">
+            <img class="section-follow__img" src="img/photo-2.jpg" alt="Photo 2" width="192" height="167" srcset="img/photo-2.jpg 1x, img/photo-2@2x.jpg 2x">
+          </li>
+          <li class="section-follow__item">
+            <img class="section-follow__img" src="img/photo-3.jpg" alt="Photo 3" width="192" height="167" srcset="img/photo-3.jpg 1x, img/photo-3@2x.jpg 2x">
+          </li>
+          <li class="section-follow__item">
+            <img class="section-follow__img" src="img/photo-4.jpg" alt="Photo 4" width="192" height="167" srcset="img/photo-4.jpg 1x, img/photo-4@2x.jpg 2x">
+          </li>
+          <li class="section-follow__item">
+            <img class="section-follow__img" src="img/photo-5.jpg" alt="Photo 5" width="192" height="167" srcset="img/photo-5.jpg 1x, img/photo-5@2x.jpg 2x">
+          </li>
+          <li class="section-follow__item">
+            <img class="section-follow__img" src="img/photo-6.jpg" alt="Photo 6" width="192" height="167" srcset="img/photo-6.jpg 1x, img/photo-6@2x.jpg 2x">
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <script src="js/main.js"></script>
