--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 
-  <div class="loader-wrapper js-loader">
+  <!-- <div class="loader-wrapper js-loader">
     <span class="loader"></span>
-  </div>
+  </div> -->
 
   <!-- HEADER  -->
   <header class="site-header">
@@ -171,6 +171,54 @@
       </div>
     </section>
   </main>
+
+
+  <!-- SITE-FOOTER  -->
+  <footer class="site-footer">
+    <div class="site-footer__container container">
+      <nav class="site-footer__sitenav sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Sustainability</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Contact us</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">FAQ</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Careers</a>
+          </li>
+        </ul>
+        <ul class="sitenav__list">
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Privacy policy</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">CA privacy rights</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Terms of Use</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Newsletter</a>
+          </li>
+        </ul>
+      </nav>
+
+      <form class="site-footer__form index-form" action="http://echo.htmlacademy.ru" target="_blank" method="POST">
+        <h2 class="index-form__title">Only good hair daes ahead—and 10% off your first order</h2>
+        <div class="index-form__email-sender-box">
+          <input class="index-form__input" type="email" name="email" required>
+          <button class="index-form__button"  type="submit">Subscribe</button>
+        </div>
+        <div class="index-form__info">Want to shop in person? Swing by our showroom.</div>
+        <address class="index-form__address">M-F, 10am-2pm 5051 E Indigo St, Suite 105, Mesa, AZ 85205</address>
+      </form>
+    </div>
+    <div class="site-footer__bottom">&copy; 2021dae . All rights reserved.</div>
+  </footer>
 
   <script src="js/main.js"></script>
 </body>
