--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div> -->
 
   <!-- HEADER  -->
-  <header class="site-header">
+  <header class="site-header site-header--fixed">
     <div class="site-header__container container">
       <div class="site-header__top">Free Shipping on US Orders Over $60</div>
     </div>
