--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 
-  <!-- <div class="loader-wrapper js-loader">
+  <div class="loader-wrapper js-loader">
     <span class="loader"></span>
-  </div> -->
+  </div>
 
   <!-- HEADER  -->
   <header class="site-header site-header--fixed">
